# xcc-core

./: CMakeLists.txt  README.md
Visualizers/: xanadu-core.natvis
config/: VersionInfo.rc.in  xcc-core-config.cmake.in  xcc-core.pc.in
include/xcc-core/: XAllocator.h  XBase64.h  XByteArray.h  XCoreApplication.h  XDateTime.h  XEndian.h  XException.h  XFileSystem.h  XHash.h  XJsonArray.h  XJsonDocument.h  XJsonObject.h  XJsonPosix.h  XJsonValue.h  XLibrary.h  XMachineCpu.h  XMutex.h  XNative.h  XObject.h  XProcess.h  XProcessInfo.h  XRegistry.h  XSetting.h  XShell.h  XString.h  XSystem.h  XTernary.h  XThread.h  XTime.h  XTimeZone.h  XUuid.h  XVariant.h  header.h  xcc.h
include/xcc-core/container/: XAllocator.h  XByteArray.h  XReferenceCounter.h  XSharedPointer.h  XString.h  XVersionInfo.h  string.h
include/xcc-core/filesystem/: XFile.h  XFileCache.h  XFileInfo.h  XFileSystem.h  XFolder.h  XMemoryFS.h  XStandardPath.h  path.h
include/xcc-core/native/: XNativeSoftware.h
include/xcc-core/serialize/: XBase64.h  XCryptoHash.h  XJsonArray.h  XJsonDocument.h  XJsonObject.h  XJsonValue.h
include/xcc-core/sync/: XMutex.h  XProcess.h  XProcessInfo.h  XThread.h
include/xcc-core/system/: XDynamicLibrary.h  XEndian.h  XEnvironmentVariables.h  XOperatingSystem.h  XShell.h  XSystem.h  dynamic_library.h  operating_system.h  shell.h
platform/darwin/: XNativeProcess.cpp  XPlatformMachineCpu.cpp
platform/linux/: XNativeProcess.cpp  XPlatformMachineCpu.cpp
platform/win32/: XNativeNtdll.cpp  XNativeNtdll.h  XNativeProcess.cpp  XPlatformMachineCpu.cpp
platform/windows/: XNativeNtdll.cpp  XNativeProcess.cpp
platform/xpa/: XPlatformProcess.cpp  XPlatformProcess.h
source/: XAllocator.cpp  XBase64.cpp  XByteArray.cpp  XCoreApplication.cpp  XDateTime.cpp  XEndian.cpp  XException.cpp  XFileSystem.cpp  XHash.cpp  XLibrary.cpp  XMutex.cpp  XNative.cpp  XObject.cpp  XProcess.cpp  XProcessInfo.cpp  XRegistry.cpp  XSetting.cpp  XShell.cpp  XString.cpp  XSystem.cpp  XTernary.cpp  XThread.cpp  XTime.cpp  XTimeZone.cpp  XUuid.cpp  XVariant.cpp  dllmain.cpp
source/Hash/: XHashCRC32.cpp  XHashCRC32.h  XHashMD5.cpp  XHashMD5.h  XHashSHA1.cpp  XHashSHA1.h  XHashSHA2.cpp
source/container/: XAllocator.cpp  XByteArray.cpp  XReferenceCounter.cpp  XSharedPointer.cpp  XString.cpp  XVersionInfo.cpp  string.cpp
source/filesystem/: XFile.cpp  XFileCache.cpp  XFileInfo.cpp  XFileInfoPrivate.h  XFileSystem.cpp  XFolder.cpp  XFolderPrivate.h  XMemoryFS.cpp  XStandardPath.cpp  path.cpp
source/machine/: XMachineCpu.cpp  XMachineCpuPrivate.h
source/native/: XNativeSoftware.cpp
source/platform/: ntdll.cpp  process_common.cpp
source/platform/darwin/: process_darwin.cpp
source/platform/linux/: process_linux.cpp
source/platform/windows/: ntdll.cpp  ntdll.h  process_windows.cpp
source/process/: process_common.cpp  process_common.h  process_darwin.cpp  process_linux.cpp  process_windows.cpp
source/serialize/: XBase64.cpp  XCryptoHash.cpp  XHashCRC32.cpp  XHashCRC32.h  XHashCRC64_ECMA.cpp  XHashCRC64_ECMA.h  XHashMD5.cpp  XHashMD5.h  XHashSHA1.cpp  XHashSHA1.h  XHashSHA2.cpp  XHashSHA2.h  XHashTypes.h  XJsonArray.cpp  XJsonDocument.cpp  XJsonObject.cpp  XJsonPosix.cpp  XJsonPrivate.cpp  XJsonPrivate.h  XJsonValue.cpp
source/sync/: XMutex.cpp  XProcess.cpp  XProcessInfo.cpp  XThread.cpp
source/system/: XDynamicLibrary.cpp  XEndian.cpp  XEnvironmentVariables.cpp  XNative.cpp  XOperatingSystem.cpp  XRegistry.cpp  XShell.cpp  XSystem.cpp  dynamic_library.cpp  operating_system.cpp  shell.cpp
